# AFL

./: .env.example  .gitignore  FEATURE_ENGINEERING.md  README.md  main.py  pyproject.toml  requirements.txt
app/: streamlit_app.py
config/: settings.py
data/models/v_2026-02-22T12-37-39.745829/: metadata.json
data/models/v_2026-02-22T12-51-40.697788/: col_medians.npy  metadata.json
data/models/v_2026-02-22T12-57-26.145677/: metadata.json  xgb_cls.json
data/models/v_2026-02-22T18-39-37.091858/: metadata.json  scaler.pkl
data/models/v_2026-02-22T20-49-53.137753/: calibrator.pkl  lgb_cls.pkl  lgb_margin.pkl  lr_cls.pkl  metadata.json
data/models/v_2026-02-22T20-55-00.749361/: calibrator.pkl  metadata.json
data/models/v_2026-02-22T21-06-31.781635/: calibrator.pkl  metadata.json  ridge_margin.pkl
data/models/v_2026-02-22T21-29-24.401737/: calibrator.pkl  metadata.json  xgb_margin.json
data/processed/: elo_system.pkl
data/reports/: round_preview_2026_20260222_214139.md  round_preview_2026_R1_20260222_143242.md
src/betting/: analysis.py  kelly.py  tracker.py  value.py
src/data_collection/: odds_collector.py  squiggle_client.py
src/llm/: analyzer.py  reporter.py
src/models/: evaluate.py  predict.py  train.py
src/pipeline/: feedback_loop.py  monitor.py
src/preprocessing/: clean.py  dataset.py  features.py
src/utils/: constants.py  helpers.py
tests/: test_betting.py  test_clean.py  test_features.py  test_helpers.py  test_main.py  test_pipeline.py  test_utils.py
